--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "bootstrap": "^4.6.0",
+    "check-env": "^1.3.0",
     "core-js": "^2.6.5",
     "jquery": "^3.6.0",
     "js-base64": "^3.5.2",
@@ -21,8 +22,8 @@
     "@vue/cli-service": "^3.9.0",
     "compression-webpack-plugin": "^6.1.1",
     "compressorjs": "^1.0.6",
+    "node-sass": "^4.9.4",
     "sass-loader": "^7.1.0",
-    "node-sass": "^4.9.0",
     "vue-template-compiler": "^2.6.10"
   },
   "postcss": {
