--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "@vue/cli-service": "^3.9.0",
     "compression-webpack-plugin": "^6.1.1",
     "compressorjs": "^1.0.6",
-    "node-sass": "^4.9.4",
+    "sass": "^1.55.0",
     "sass-loader": "^7.1.0",
     "vue-template-compiler": "^2.6.10"
   },
